--- a/src/main/resources/view/main_menu.fxml
+++ b/src/main/resources/view/main_menu.fxml
@@ -3,8 +3,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.MainMenuController">
-   <children>
-      <Button fx:id="tempButton" layoutX="270.0" layoutY="188.0" mnemonicParsing="false" text="Go Back" />
-   </children>
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.MainMenuController">
+   <top>
+      <HBox fx:id="header" prefHeight="40.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="tempButton" mnemonicParsing="false" text="Button" />
+         </children></HBox>
+   </top>
+</BorderPane>
