--- a/src/main/resources/view/main_menu.fxml
+++ b/src/main/resources/view/main_menu.fxml
@@ -1,13 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.MainMenuController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.MainMenuController">
    <top>
-      <HBox fx:id="header" prefHeight="40.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
+      <HBox fx:id="header" prefHeight="40.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="tempButton" mnemonicParsing="false" text="Button" />
+            <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="300.0" spacing="20.0">
+               <children>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../assets/icon40.png" />
+                     </image>
+                  </ImageView>
+                  <Label text="NORDIC MOTORHOMES" />
+               </children>
+               <padding>
+                  <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+               </padding>
+            </HBox>
+            <HBox alignment="CENTER_RIGHT" prefHeight="50.0" spacing="20.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <ImageView fx:id="userImage" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="usernameLabel" text="Username" />
+                  <Button fx:id="logoutButton" mnemonicParsing="false" text="Log Out" />
+               </children>
+               <padding>
+                  <Insets right="20.0" />
+               </padding></HBox>
          </children></HBox>
    </top>
 </BorderPane>
