Main Menu Layout + Logic
Basic layout of the application initialized too. Menu does not look as good as intended, but it is very hard to make it look nice and responsive. Currently it is semi responsive and I would say acceptable in terms of looks. Major limitation not being able to make images responsive in a reasonable way

--- a/src/main/resources/stylesheets/authentication.css
+++ b/src/main/resources/stylesheets/authentication.css
@@ -1,4 +1,6 @@
-/* Stylesheet dedicated to the "authentication" view */
+/* Stylesheet dedicated to the "authentication" view
+   Author(s): Octavian Roman */
+
 @import url('https://fonts.googleapis.com/css2?family=Laila&display=swap');
 
 .label {
