--- a/src/main/resources/view/staff_add.fxml
+++ b/src/main/resources/view/staff_add.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane prefHeight="340.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.StaffAddController">
    <children>
-      <ImageView fx:id="previewImage" fitHeight="180.0" fitWidth="180.0" layoutX="28.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="previewImage" fitHeight="180.0" fitWidth="180.0" layoutX="28.0" layoutY="84.0" pickOnBounds="true">
          <image>
             <Image url="@../assets/users/user_placeholder.png" />
          </image></ImageView>
