--- a/src/main/resources/view/main_menu.fxml
+++ b/src/main/resources/view/main_menu.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
+<!-- Author(s) Octavian Roman -->
+
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.MainMenuController">
    <top>
       <HBox fx:id="header" prefHeight="40.0" BorderPane.alignment="CENTER">
