--- a/src/main/resources/view/staff_entity.fxml
+++ b/src/main/resources/view/staff_entity.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
+<!-- Author(s) Octavian Roman -->
+
 <HBox fx:id="entityContainer" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="80.0" styleClass="entity-container" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.StaffEntityController">
    <children>
       <ImageView fx:id="image" fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" />
@@ -30,7 +32,7 @@
       </HBox>
       <HBox alignment="CENTER" layoutX="690.0" layoutY="10.0" prefHeight="100.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
          <children>
-            <MenuButton fx:id="options" mnemonicParsing="false" textAlignment="CENTER" textFill="TRANSPARENT">
+            <MenuButton mnemonicParsing="false" styleClass="entityOptionsButton" textAlignment="CENTER" textFill="TRANSPARENT">
               <items>
                 <MenuItem fx:id="edit" mnemonicParsing="false" text="Edit" />
                 <MenuItem fx:id="delete" mnemonicParsing="false" text="Delete" />
