added submodules in controller

--- a/src/main/resources/view/rental_menu.fxml
+++ b/src/main/resources/view/rental_menu.fxml
@@ -7,7 +7,7 @@
 
 <!-- Author(s) Octavian Roman -->
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.RentalMenuController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.Menu.RentalMenuController">
    <top>
       <HBox fx:id="header" prefHeight="40.0" BorderPane.alignment="CENTER">
          <children>
