--- a/src/main/resources/view/staff_menu.fxml
+++ b/src/main/resources/view/staff_menu.fxml
@@ -8,7 +8,7 @@
 
 <!-- Author(s) Octavian Roman -->
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.StaffMenuController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.staff.StaffMenuController">
    <top>
       <HBox fx:id="header" prefHeight="40.0" BorderPane.alignment="CENTER">
          <children>
