--- a/src/main/resources/stylesheets/staff_menu.css
+++ b/src/main/resources/stylesheets/staff_menu.css
@@ -1,5 +1,5 @@
-.menuContainer {
-    -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #9a9a9a, #e0e0e0);
+#containerParent > .viewport {
+    -fx-background-color: #dddddd;
 }
 
 .headerTitle {
@@ -25,21 +25,17 @@
 }
 
 #backButton:hover {
-    -fx-background-color: #228bb6;
+    -fx-background-color: #92b5be;
     -fx-text-fill: #fff;
 }
 
 #backButton:pressed {
-    -fx-background-color: #146785;
+    -fx-background-color: #228bb6;
     -fx-text-fill: #fff;
 }
 
 .toolbar {
-    -fx-background-color: #c9c9c9;
-}
-
-#containerParent {
-    -fx-background-color: #c9c9c9;
+    -fx-background-color: #92b5be;
 }
 
 .toolFlipper:hover, #add:hover, .entityOptionsButton:hover {
@@ -47,10 +43,10 @@
     -fx-border-color: #000;
 }
 
-.toolFlipper:pressed, #add:pressed, .entityOptionsButtons:pressed {
+.toolFlipper:pressed, #add:pressed {
     -fx-border-width: 1px;
     -fx-border-color: #000;
-    -fx-background-color: #a9a9a9;
+    -fx-background-color: #228bb6;
 }
 
 .entityOptionsButton {
@@ -69,7 +65,8 @@
 }
 
 .entity-container {
-    -fx-border-width: 2px;
+    -fx-background-color: #fff;
+    -fx-border-width: 1px;
     -fx-border-color: #000;
 }
 
