--- a/src/main/resources/view/motorhome_menu.fxml
+++ b/src/main/resources/view/motorhome_menu.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
@@ -9,7 +10,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.motorhome.MotorhomeMenuController">
    <top>
-      <HBox fx:id="header" prefHeight="40.0" BorderPane.alignment="CENTER">
+      <HBox prefHeight="40.0" BorderPane.alignment="CENTER">
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="40.0" spacing="20.0">
                <children>
@@ -42,6 +43,117 @@
          </children></HBox>
    </top>
    <center>
-      <VBox prefHeight="200.0" BorderPane.alignment="CENTER" />
+      <VBox prefHeight="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox alignment="CENTER" prefHeight="50.0" styleClass="toolbar">
+               <children>
+                  <HBox alignment="CENTER" maxWidth="-Infinity" prefHeight="50.0" styleClass="toolbar" HBox.hgrow="ALWAYS">
+                     <children>
+                        <HBox alignment="CENTER" prefHeight="50.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label fx:id="entityCountLabel" styleClass="entity-label-text" text="# Items" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <HBox fx:id="nameToolFlipper" alignment="CENTER" prefHeight="50.0" styleClass="toolFlipper" HBox.hgrow="NEVER">
+                                 <children>
+                                    <Label fx:id="nameLabel" styleClass="entity-label-text" text="A-Z" />
+                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../assets/up_down_arrow.png" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <HBox fx:id="roleToolFlipper" alignment="CENTER" styleClass="toolFlipper" HBox.hgrow="NEVER">
+                                 <children>
+                                    <Label fx:id="roleLabel" styleClass="entity-label-text" text="Role" />
+                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../assets/up_down_arrow.png" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <HBox fx:id="phoneToolFlipper" alignment="CENTER" styleClass="toolFlipper" HBox.hgrow="NEVER">
+                                 <children>
+                                    <Label fx:id="phoneLabel" styleClass="entity-label-text" text="Phone" />
+                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../assets/up_down_arrow.png" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <HBox fx:id="genderToolFlipper" alignment="CENTER" styleClass="toolFlipper" HBox.hgrow="NEVER">
+                                 <children>
+                                    <Label fx:id="genderLabel" styleClass="entity-label-text" text="Gender" />
+                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../assets/up_down_arrow.png" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="10.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <HBox fx:id="settings" alignment="CENTER" layoutX="90.0" layoutY="10.0" prefHeight="50.0" prefWidth="40.0">
+                                 <children>
+                                    <ImageView fitHeight="36.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../assets/settings.png" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </HBox>
+                              <HBox fx:id="add" alignment="CENTER">
+                                 <children>
+                                    <ImageView fitHeight="40.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../assets/add.png" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </HBox>
+                     </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </HBox>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </HBox>
+            <ScrollPane fx:id="containerParent" fitToWidth="true" hbarPolicy="NEVER" prefHeight="200.0" VBox.vgrow="ALWAYS">
+               <content>
+                  <VBox fx:id="entityContainer" alignment="CENTER" spacing="5.0" styleClass="scroll-container">
+                     <padding>
+                        <Insets bottom="20.0" left="100.0" right="100.0" top="20.0" />
+                     </padding></VBox>
+               </content>
+               <styleClass>
+                  <String fx:value="edge-to-edge" />
+                  <String fx:value="scrollpane" />
+               </styleClass>
+            </ScrollPane>
+         </children></VBox>
    </center>
 </BorderPane>
